@@ -3,6 +3,7 @@
 <TITLE>GtkdocTester</TITLE>
 bug_141869_a
 bug_141869_b
+bug_324535
 bug_379466
 bug_380824
 bug_411739
